# agl_anon

./: pyproject.toml
agl_anon/: evaluate.py  train.py
agl_anon/datasets/: dataloader.py  ocr_dataset.py
agl_anon/models/: CRNN.py
agl_anon/utils/: config.py
